--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
    {
       text-align:center;
    }
-.menu li {
+.menu li 
+   {
    list-style-type: none;
    display: inline-table;
    width: 20%;
