--- a/style.css
+++ b/style.css
@@ -8,3 +8,23 @@
    display: inline-table;
    width: 20%;
    }
+.p
+    {
+       font-size: 20px;
+       font-family: Arial Narrow, Comic Sans MS;
+       color: #4d0026;
+    }
+.h1
+   {
+       text-align: center;
+       color: #000033;
+   }
+.play-regular {
+  font-family: "Play", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.h2 {
+       text-align: center;
+       color: #4d004d;
+}
