--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@
        text-align: center;
        color: #000033;
    }
-.play-regular {
-  font-family: "Play", sans-serif;
+.great-vibes-regular {
+  font-family: "Great Vibes", cursive;
   font-weight: 400;
   font-style: normal;
 }
