--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     {
        font-size: 20px;
        font-family: Arial Narrow, Comic Sans MS;
-       color: #4d0026;
+       color:#330033;
     }
 .h1
    {
