--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 .p
     {
        font-size: 20px;
-       font-family: Arial Narrow, Comic Sans MS;
+       font-family: Times New Roman, Arial Narrow, Comic Sans MS;
        color:#330033;
     }
 .great-vibes-regular {
