--- a/style.css
+++ b/style.css
@@ -19,9 +19,9 @@
   font-weight: 400;
   font-style: normal;
   text-align: center;
-  color: #000033;
+  color:#000033;
 }
 .h2 {
        text-align: center;
-       color: #4d004d;
+       color:#0f3d0f;
 }
