--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
    display: inline-table;
    width: 20%;
    }
-.p
+.text
     {
        font-size: 20px;
        font-family: Times New Roman, Arial Narrow, Comic Sans MS;
@@ -21,7 +21,8 @@
   text-align: center;
   color:#000033;
 }
-.h2 {
+.zagl 
+    {
        text-align: center;
        color:#0f3d0f;
-}
+    }
