--- a/style.css
+++ b/style.css
@@ -26,3 +26,9 @@
        text-align: center;
        color:#0f3d0f;
     }
+.perer  {
+       color:#28004d;
+        }
+.perek  {
+      color:#330000;
+}
