--- a/style.css
+++ b/style.css
@@ -14,12 +14,10 @@
        font-family: Times New Roman, Arial Narrow, Comic Sans MS;
        color:#330033;
     }
-.great-vibes-regular {
-  font-family: "Great Vibes", cursive;
+.pangolin-regular {
+  font-family: "Pangolin", cursive;
   font-weight: 400;
   font-style: normal;
-  text-align: center;
-  color:#000033;
 }
 .zagl 
     {
