--- a/style.css
+++ b/style.css
@@ -14,11 +14,15 @@
        font-family: Times New Roman, Arial Narrow, Comic Sans MS;
        color:#330033;
     }
-.pangolin-regular {
-  font-family: "Pangolin", cursive;
-  font-weight: 400;
+// <uniquifier>: Use a unique and descriptive class name
+// <weight>: Use a value from 300 to 700
+
+.comfortaa-<uniquifier> {
+  font-family: "Comfortaa", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
   font-style: normal;
-  text-align: center;
+  text-align:center;
 }
 .zagl 
     {
