--- a/style.css
+++ b/style.css
@@ -14,15 +14,11 @@
        font-family: Times New Roman, Arial Narrow, Comic Sans MS;
        color:#330033;
     }
-// <uniquifier>: Use a unique and descriptive class name
-// <weight>: Use a value from 300 to 700
-
-.comfortaa-<uniquifier> {
-  font-family: "Comfortaa", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
+.neucha-regular {
+  font-family: "Neucha", cursive;
+  font-weight: 400;
   font-style: normal;
-  text-align:center;
+  text-align: center;
 }
 .zagl 
     {
